# KubeMedic

./: .gitignore  README.md  __init__.py  client.py  kubemedic-blog.md  models.py  openenv.yaml  pyproject.toml  train_kubemedic_grpo.py  training.py
.github/workflows/: push-env.yml
notebooks/: kubemedic_trl_hf_qwen_0.6B.ipynb  kubemedic_trl_hf_training.ipynb  kubemedic_trl_hf_training_inline.ipynb
server/: Dockerfile  Kubemedic_environment.py  __init__.py  agent.py  app.py  cluster.py  curriculum.py  env.py  faults.py  grader.py  manifests.py  requirements.txt  spec.py  tools.py
server/k8s/: base-workloads.yaml
server/tests/: test_agent.py  test_cluster.py  test_curriculum.py  test_env.py  test_faults.py  test_grader.py  test_integration_aks.py  test_manifests.py  test_tools.py
