# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-Kubemedic"
version = "0.1.0"
description = "Kubemedic environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-mgmt-containerservice>=41.1.0",
    "kubernetes>=35.0.0",
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openai>=1.99.1,<2.25.0",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "trl[vllm]>=0.29.0",
    "vllm>=0.11.0",
    "transformers>=4.56.0,<5",
    "accelerate>=0.34.0",
    "peft>=0.13.0",
    "datasets>=2.21.0",
    "bitsandbytes>=0.43.0",
    "huggingface_hub>=0.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "ipywidgets>=8.1.0",
    "jmespath>=1.0.1",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m Kubemedic.server.app
server = "Kubemedic.server.app:main"
train-kubemedic-grpo = "Kubemedic.training:main"

[tool.setuptools]
include-package-data = true
packages = ["Kubemedic", "Kubemedic.server"]
package-dir = { "Kubemedic" = ".", "Kubemedic.server" = "server" }

[tool.setuptools.package-data]
"Kubemedic.server" = ["k8s/*.yaml"]
